# qymanager

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  PLAN.md  PROGRESS.md  PROMPT.md  README.md  SOFT_TODO.md  STATUS.md  TODO.md  opencode.jsonc  pyproject.toml
.opencode/agents/: qyconv-builder.md  qyconv-web.md
PLAN/: 00-overview.md  W1-backend-devices.md  W2-diff-schema-export.md  W3-midi-routes.md  W4-frontend-scaffold.md  W5-field-editor.md  W6-export-dialog.md  W7-diff-view.md  W8-realtime-panel.md  W9-serve-integration.md  verification.md
cli/: app.py  qy_convert.py
cli/commands/: audit.py  bulk_summary.py  convert.py  diff.py  dump.py  edit.py  edit_field.py  info.py  (+12 more)
data/: sgt_R_tables.json  sgt_u01_R_tables.json  sgt_voice_mapping.json  summer_R_table.json  voice_signature_db.json
docs/: MIDI_REVERSE_ENGINEERING.md  QY700_FORMAT.md  QY70_FORMAT.md  QY70_QY700_MAPPING.md  SESSION_RECAP.md
examples/: README.md  basic_analysis.py  compare_patterns.py  convert_patterns.py  hex_inspection.py  modify_pattern.py  sysex_analysis.py
midi_tools/: al7f_header_decode.py  analyze_2543.py  analyze_2543_6byte_header.py  analyze_2543_alignment.py  analyze_2543_anomalies.py  analyze_2543_compare_r.py  analyze_2543_continuous_stream.py  analyze_2543_deep.py  analyze_2543_event_types.py  analyze_2543_failing_events.py  analyze_2543_final.py  analyze_2543_header_size.py  analyze_2543_mixed_rotation.py  analyze_2543_position.py  analyze_2543_r_sweep_cumulative.py  analyze_2543_rotation_model.py  analyze_2543_trailing_bytes.py  analyze_2543_velocity.py  analyze_cross_encoding_failures.py  analyze_cross_pattern_signatures.py  analyze_ctrl_skip_combined.py  analyze_ctrl_skip_index.py  analyze_event_types.py  analyze_events.py  analyze_ground_truth_kick.py  analyze_header.py  analyze_header_deep.py  analyze_header_diff.py  analyze_header_raw_tempo.py  analyze_header_tempo_chord.py  analyze_known_pattern.py  analyze_new_preambles.py  analyze_new_preambles_deep.py  analyze_pattern_c_vs_summer.py  analyze_pc_is_summer.py  analyze_q7p_events.py  analyze_rhy1_encoding.py  analyze_rhy1_global_index.py  analyze_rhy1_multinote.py  analyze_rhy1_position_r.py  (+143 more)
qyconv/: __init__.py
qymanager/: __init__.py
tests/: conftest.py  test_7bit_codec.py  test_address_map_xg_spec.py  test_cli_field.py  test_cli_structure.py  test_cli_xg.py  test_editor_address_map.py  test_editor_ops.py  test_editor_realtime.py  test_editor_schema.py  test_lossy_policy.py  test_multi_part_completeness.py  test_pattern_editor.py  test_q7p_emit_udm.py  test_q7p_to_udm.py  test_quantizer.py  test_qy700_parser.py  test_qy70_parser.py  test_smf_udm.py  test_sparse_decoder.py  test_syx_edit.py  test_syx_emit_udm.py  test_syx_to_udm.py  test_udm_schema.py  test_voice_extraction_pipeline.py  test_xg_bulk_udm.py  test_xg_param.py  test_xg_voices.py
web/: dev.sh
wiki/: 2543-encoding.md  7bit-encoding.md  bar-structure.md  bitstream.md  blk-format.md  bricking.md  conversion-roadmap.md  decoder-status.md  dense-encoding-spec.md  event-fields.md  format-mapping.md  header-section.md  identity-reply.md  index.md  log.md  midi-setup.md  open-questions.md  overview.md  pattern-directory.md  pattern-editor.md  pattern-header-al7f.md  pattern-restore.md  q7p-format.md  quickstart-sysex-extraction.md  quirks.md  qy-data-filer.md  qy70-bulk-dump.md  qy70-device.md  qy70-drum-kits.md  qy70-groove-templates.md  qy70-menu-tree.md  qy70-modes.md  qy70-preset-phrases.md  qy70-voice-list.md  qy700-chord-types.md  qy700-device.md  qy700-disk-mode.md  qy700-effect-mode.md  qy700-groove-templates.md  qy700-menu-tree.md  (+20 more)
(+253 files in other folders)
