[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qyconv"
version = "0.1.0"
description = "Bidirectional converter for Yamaha QY70 and QY700 pattern files"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "QYConv Contributors"}
]
keywords = ["yamaha", "qy70", "qy700", "midi", "sysex", "pattern", "converter"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: MIDI",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.scripts]
qyconv = "cli.app:run"

[project.urls]
Homepage = "https://github.com/qyconv/qyconv"
Documentation = "https://github.com/qyconv/qyconv#readme"
Issues = "https://github.com/qyconv/qyconv/issues"

[tool.hatch.build.targets.wheel]
packages = ["qyconv", "cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
